FACES-1953 Develop alloy:accordion component (fixed references to h:graphicImage)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/data-model/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/data-model/accordion.xhtml
@@ -5,7 +5,7 @@
 	<showcase:example>
 		<alloy:accordion value="#{accordionModelBean.liferayBenefits}" var="liferayBenefit">
 			<alloy:tab label="#{liferayBenefit.label}">
-				<h:graphicImage name="icon-#{liferayBenefit.imageName}" library="images" />
+				<alloy:image name="icon-#{liferayBenefit.imageName}" library="images" />
 				<span>#{liferayBenefit.description}</span>
 			</alloy:tab>
 		</alloy:accordion>
