--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
@@ -14,14 +14,14 @@
 			<alloy:accordion styleClass="accordion-example-1">
 				<alloy:tab>
 					<f:facet name="header">
-						<h:graphicImage library="images" name="icon-compatible.png" />
+						<alloy:image library="images" name="icon-compatible.png" />
 						<h:outputText value="Compatible" />
 					</f:facet>
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
 				</alloy:tab>
 				<alloy:tab>
 					<f:facet name="header">
-						<h:graphicImage library="images" name="icon-enterprise.png" />
+						<alloy:image library="images" name="icon-enterprise.png" />
 						<h:outputText value="Enterprise Ready" />
 					</f:facet>
 					<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the
@@ -29,21 +29,21 @@
 				</alloy:tab>
 				<alloy:tab>
 					<f:facet name="header">
-						<h:graphicImage library="images" name="icon-integration.png" />
+						<alloy:image library="images" name="icon-integration.png" />
 						<h:outputText value="Powerful Integration" />
 					</f:facet>
 					<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
 				</alloy:tab>
 				<alloy:tab>
 					<f:facet name="header">
-						<h:graphicImage library="images" name="icon-lightweight.png" />
+						<alloy:image library="images" name="icon-lightweight.png" />
 						<h:outputText value="Lightweight" />
 					</f:facet>
 					<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
 				</alloy:tab>
 				<alloy:tab>
 					<f:facet name="header">
-						<h:graphicImage library="images" name="icon-open-source.png" />
+						<alloy:image library="images" name="icon-open-source.png" />
 						<h:outputText value="Open Source" />
 					</f:facet>
 					<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
@@ -85,24 +85,24 @@
 		<showcase:example description="#{i18n['alloy-accordion-general-example-2']}" longDescription="true" number="2">
 			<alloy:accordion styleClass="accordion-example-2">
 				<alloy:tab contentClass="content-compatible" headerClass="header-compatible" label="Compatible">
-					<h:graphicImage library="images" name="icon-compatible.png" />
+					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
 				</alloy:tab>
 				<alloy:tab contentClass="content-enterprise" headerClass="header-enterprise" label="Enterprise Ready">
-					<h:graphicImage library="images" name="icon-enterprise.png" />
+					<alloy:image library="images" name="icon-enterprise.png" />
 					<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the
 						cloud.</span>
 				</alloy:tab>
 				<alloy:tab contentClass="content-integration" headerClass="header-integration" label="Powerful Integration">
-					<h:graphicImage library="images" name="icon-integration.png" />
+					<alloy:image library="images" name="icon-integration.png" />
 					<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
 				</alloy:tab>
 				<alloy:tab contentClass="content-lightweight" headerClass="header-lightweight" label="Lightweight">
-					<h:graphicImage library="images" name="icon-lightweight.png" />
+					<alloy:image library="images" name="icon-lightweight.png" />
 					<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
 				</alloy:tab>
 				<alloy:tab contentClass="content-open-source" headerClass="header-open-source" label="Open Source">
-					<h:graphicImage library="images" name="icon-open-source.png" />
+					<alloy:image library="images" name="icon-open-source.png" />
 					<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
 				</alloy:tab>
 			</alloy:accordion>
