--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/selected-tab/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/selected-tab/accordion.xhtml
@@ -7,24 +7,24 @@
 			<alloy:messages globalOnly="true" layout="table" />
 			<alloy:accordion binding="#{accordionBackingBean.accordion}" selectedIndex="#{accordionBackingBean.defaultSelectedIndex}">
 				<alloy:tab label="Compatible">
-					<h:graphicImage library="images" name="icon-compatible.png" />
+					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
 				</alloy:tab>
 				<alloy:tab label="Enterprise Ready">
-					<h:graphicImage library="images" name="icon-enterprise.png" />
+					<alloy:image library="images" name="icon-enterprise.png" />
 					<span>Liferay is designed for scalability, reliablity, and high performance both on-premise and in the
 						cloud.</span>
 				</alloy:tab>
 				<alloy:tab label="Powerful Integration">
-					<h:graphicImage library="images" name="icon-integration.png" />
+					<alloy:image library="images" name="icon-integration.png" />
 					<span>Liferay is designed for integrating with both enterprise systems and web-based resources.</span>
 				</alloy:tab>
 				<alloy:tab label="Lightweight">
-					<h:graphicImage library="images" name="icon-lightweight.png" />
+					<alloy:image library="images" name="icon-lightweight.png" />
 					<span>With Liferay, projects are completed faster and with smaller budgets so you can see immediate results.</span>
 				</alloy:tab>
 				<alloy:tab label="Open Source">
-					<h:graphicImage library="images" name="icon-open-source.png" />
+					<alloy:image library="images" name="icon-open-source.png" />
 					<span>Our open source community fosters innovation, increase security, and improves quality of the software.</span>
 				</alloy:tab>
 			</alloy:accordion>
