--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputscript/modules/outputScript.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputscript/modules/outputScript.xhtml
@@ -1,30 +1,27 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
 	template="/templates/component-3col.xhtml">
-	
+
 	<ui:define name="col1">
-		<!-- This example uses the event module in order to run the <script> once the domready event occurs. The -->
-		<!-- domready event occurs after the page is rendered, so scripts which run on domready avoid blocking the -->
-		<!-- rendering of the page. -->
-		<showcase:example number="1">
+		<!-- Example 1: Event module -->
+		<showcase:example description="#{i18n['alloy-outputscript-modules-example-1']}" number="1">
 			<span id="example1:text"></span>
 			<alloy:outputScript use="event">
 				A.on('domready', function () {
-					document.getElementById('example1:text').innerHTML = '#{i18n['alloy-outputscript-modules-example-1']}';
+					document.getElementById('example1:text').innerHTML = '#{i18n['alloy-outputscript-modules-script-1']}';
 				});
 			</alloy:outputScript>
 		</showcase:example>
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- This example uses the "node" module in order to attach a callback to the "click" event of the -->
-		<!-- <button>. -->
-		<showcase:example number="2">
+		<!-- Example 2: Node module -->
+		<showcase:example description="#{i18n['alloy-outputscript-modules-example-2']}" number="2">
 			<span id="example2:text"></span>
-			<alloy:button id="button" binding="#{button}" value="#{i18n['click-here-to-execute-the-function']}." /> 
+			<alloy:button id="button" binding="#{button}" value="#{i18n['click-here-to-execute-the-click-event-callback']}" />
 			<alloy:outputScript use="node" target="body">
 				A.one('##{alloy:escapeClientId(button.clientId)}').on('click', function () {
-					document.getElementById('example2:text').innerHTML = '#{i18n['alloy-outputscript-modules-example-2']}';
+					document.getElementById('example2:text').innerHTML = '#{i18n['alloy-outputscript-modules-script-2']}';
 				});
 			</alloy:outputScript>
 		</showcase:example>
