FACES-1898 Develop alloy:dialog, alloy:outputTooltip, and alloy:popover components (Added boundingBox in order to allow developers to specify the dialog for ajax rendering. Since autoShow and headerText attributes are encoded by OverlayRendererBase, removed <yui>true</yui> from autoShow and headerText in components-ext.xml in order to avoid duplicate encoding of the attributes in the child classes as well. In OverlayRendererBase changed javascript to set display style to null rather than 'block' in order to remove the display style after AlloyUI has taken control of the Node.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -15,7 +15,7 @@
 					</alloy:field>
 					<alloy:commandButton action="#{popoverBackingBean.submit}" onclick="Liferay.component('popover1').hide();"
 						value="#{i18n['submit']}">
-						<f:ajax execute="@form" render="myForm1:outputModel:modelValue" />
+						<f:ajax execute="@form" render="@form" />
 					</alloy:commandButton>
 					<alloy:button onclick="Liferay.component('popover1').hide();" value="#{i18n['cancel']}" />
 				</alloy:popover>
@@ -39,7 +39,7 @@
 					</alloy:field>
 					<alloy:commandButton action="#{popoverBackingBean.submit}" onclick="Liferay.component('popover2').hide();"
 						showCloseIcon="false" value="#{i18n['submit']}">
-						<f:ajax execute="@form" render="myForm2:outputModel:modelValue" />
+						<f:ajax execute="@form" render="@form" />
 					</alloy:commandButton>
 					<alloy:button onclick="Liferay.component('popover2').hide();" value="#{i18n['cancel']}" />
 				</alloy:popover>
