--- a/demos/bridge/primefaces5-portlet/src/main/webapp/views/portletViewMode.xhtml
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/views/portletViewMode.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <f:view xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 	<h:head />
 	<h:body styleClass="jsf2-portlet ltr">
 		<ui:include src="styling.xhtml" />
