--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputscript/general/outputScript.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputscript/general/outputScript.xhtml
@@ -1,6 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/templates/component-3col.xhtml">
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Script rendered inline -->
