FACES-1897 Develop alloy:inputDate component (Remove alloy:pickDate and refactor alloy:inputDate. Add dateSelect event to inputDate.) FACES-1895 Develop alloy:pickoDate component (Remove alloy:pickDate and refactor alloy:inputDate.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
@@ -6,7 +6,11 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
+				<alloy:messages globalOnly="true" layout="table" />
+				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" 
+					inputDateEventListener="#{inputDateBackingBean.inputDateEventListener}"
+					value="#{inputDateModelBean.birthday}">
+					<f:ajax event="dateSelect" render="@form" />
 					<f:ajax render="@form" />
 				</alloy:inputDate>
 			</showcase:example>
