FACES-1970 Refactor bridge:inputFile to use new Java packaging scheme (Includes API Change)

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/multiple/inputFile.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/multiple/inputFile.xhtml
@@ -7,9 +7,11 @@
 	<ui:define name="col1">
 		<h:form enctype="multipart/form-data">
 			<showcase:example>
-				<bridge:inputFile fileUploadListener="#{bridgeInputFileBackingBean.handleFileUpload}" />
+				<bridge:inputFile fileUploadListener="#{bridgeInputFileBackingBean.handleFileUpload}" multiple="multiple" />
 				<hr />
-				<h:commandButton value="#{i18n['submit']}" />
+				<h:commandButton value="#{i18n['submit']}">
+					<f:ajax execute="@form" render="@form" />
+				</h:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:include src="../bridgeInputFileCommon.xhtml" />
