--- a/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/instant-ajax/inputFile.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/instant-ajax/inputFile.xhtml
@@ -7,9 +7,9 @@
 	<ui:define name="col1">
 		<h:form enctype="multipart/form-data">
 			<showcase:example>
-				<bridge:inputFile fileUploadListener="#{bridgeInputFileBackingBean.handleFileUpload}" />
-				<hr />
-				<h:commandButton value="#{i18n['submit']}" />
+				<bridge:inputFile fileUploadListener="#{bridgeInputFileBackingBean.handleFileUpload}">
+					<f:ajax render="@form" />
+				</bridge:inputFile>
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:include src="../bridgeInputFileCommon.xhtml" />
