--- a/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/header.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/bridge/inputfile/header.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<showcase:note>
 		<h2>#{i18n['note']}</h2>
