FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:form, alloy:inputFile, and h:inputFile; Updated use-case text for bridge:inputFile; Updated use-cases for alloy:outputScript to have wider columns).

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/component.css
@@ -1,4 +1,4 @@
-code {
+.aui code {
 	color: rgb(0, 22, 142);
 }
 
@@ -65,8 +65,9 @@ code {
 	list-style-type: none;
 }
 
-.component-rendered-checkbox label,.component-required-checkbox label {
+.aui .inline-label, .inline-label {
 	display: inline;
+	margin-left: 4px;
 	margin-right: 10px;
 }
 
