--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-portlet.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-portlet.xhtml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<f:view xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	<h:head />
+<f:view xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	<alloy:head />
 	<h:body>
 		<ui:include src="showcase.xhtml" />
 	</h:body>
