--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-<h:head>
+<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+<alloy:head>
 	<title>Liferay Faces Showcase</title>
-</h:head>
+</alloy:head>
 <h:body styleClass="yui3-skin-sam">
 	<ui:include src="showcase.xhtml" />
 </h:body>
