FACES-1927 Develop alloy:body component (added description) FACES-1714 Develop Liferay Faces Showcase (added use-case for alloy:body and now using alloy:body in the showcase itself)

--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-portlet.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-portlet.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <f:view xmlns:f="http://java.sun.com/jsf/core" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 	<alloy:head />
-	<h:body>
+	<alloy:body>
 		<ui:include src="showcase.xhtml" />
-	</h:body>
+	</alloy:body>
 </f:view>
