--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 <alloy:head>
 	<title>Liferay Faces Showcase</title>
 </alloy:head>
-<h:body styleClass="yui3-skin-sam">
+<alloy:body styleClass="yui3-skin-sam">
 	<ui:include src="showcase.xhtml" />
-</h:body>
+</alloy:body>
 </html>
