FACES-1953 Develop alloy:accordion component (changed TabEvent to fire in APPLY_REQUEST_VALUES rather than INVOKE_APPLICATION; added check to make sure child tab.isRendered before rendering) FACES-1714 Develop Liferay Faces Showcase (added message to show that tabEvent fires in APPLY_REQUEST_VALUES phase)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/server-events/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/server-events/accordion.xhtml
@@ -5,8 +5,8 @@
 	<showcase:example id="accordionExample">
 		<h:form id="accordionForm">
 			<alloy:messages id="feedback" globalOnly="true" layout="table" />
-			<alloy:accordion tabEventListener="#{accordionBackingBean.tabEventListener}"
-				selectedIndex="#{accordionBackingBean.defaultSelectedIndex}">
+			<alloy:accordion selectedIndex="#{accordionBackingBean.defaultSelectedIndex}"
+				tabEventListener="#{accordionBackingBean.tabEventListener}">
 				<f:ajax event="tabCollapsed" render=":accordionExample:accordionForm:feedback" />
 				<f:ajax event="tabExpanded" render=":accordionExample:accordionForm:feedback" />
 				<alloy:tab label="Compatible">
