FACES-1901 Develop aui:tab and aui:tabView components (changed TabEvent to fire in APPLY_REQUEST_VALUES rather than INVOKE_APPLICATION; added check to make sure child tab.isRendered before rendering; added support for tab disabled attribute) FACES-1714 Develop Liferay Faces Showcase (added use-cases for Dynamic Tabs and Wizard; added message to show that tabEvent fires in APPLY_REQUEST_VALUES phase)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/server-events/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/server-events/tabView.xhtml
@@ -4,9 +4,10 @@
 
 	<showcase:example id="tabViewExample">
 		<h:form id="tabViewForm">
-			<alloy:messages id="feedback" globalOnly="true" layout="table" /><br />
-			<alloy:tabView tabEventListener="#{tabViewBackingBean.tabEventListener}"
-				selectedIndex="#{tabViewBackingBean.defaultSelectedIndex}">
+			<alloy:messages id="feedback" globalOnly="true" layout="table" />
+			<br />
+			<alloy:tabView selectedIndex="#{tabViewBackingBean.defaultSelectedIndex}"
+				tabEventListener="#{tabViewBackingBean.tabEventListener}">
 				<f:ajax event="tabSelected" render=":tabViewExample:tabViewForm:feedback" />
 				<alloy:tab label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
