FACES-1714 Develop Liferay Faces Showcase (added note to help with PrettyFaces incompatibility; added message to show that fileUploadEvent fires in UPDATE_MODEL_VALUES phase)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/general/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputfile/general/inputFile.xhtml
@@ -5,6 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form enctype="multipart/form-data" includeViewParams="false">
 			<showcase:example>
+				<alloy:messages globalOnly="true" layout="table" />
 				<alloy:inputFile fileUploadListener="#{inputFileBackingBean.handleFileUpload}" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}" />
