FACES-1714 Develop Liferay Faces Showcase (Removed unused attributes from components.) FACES-1894 Add general utilities for Liferay Faces Alloy Components (Added missing contentTypes attribute for alloy:validateFile.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/conversion/outputLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/conversion/outputLink.xhtml
@@ -13,8 +13,8 @@
 					<f:ajax render="outputLinkId" />
 				</alloy:selectOneMenu>
 				<br />
-				<alloy:outputLink id="outputLinkId" converter="convertGmapCountry" converterMessage="#{i18n['converter-message']}"
-					target="_blank" value="#{outputLinkModelBean.countryId}">
+				<alloy:outputLink id="outputLinkId" converter="convertGmapCountry" target="_blank"
+					value="#{outputLinkModelBean.countryId}">
 					<alloy:outputText value="#{i18n['link-to-a-map-of']} " />
 					<alloy:outputText converter="convertCountry" value="#{outputLinkModelBean.countryId}" />
 				</alloy:outputLink>
