--- a/demos/showcase/showcase-webapp/src/main/webapp/component/h/inputfile/general/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/h/inputfile/general/inputFile.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<h:form enctype="multipart/form-data" includeViewParams="false">
+		<h:form enctype="multipart/form-data">
 			<showcase:example>
 				<h:inputFile value="#{htmlInputFileBackingBean.uploadedPart}" />
 				<hr />
