--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanylistbox/immediate/selectManyListbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanylistbox/immediate/selectManyListbox.xhtml
@@ -10,7 +10,7 @@
 				longDescription="true" number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectManyListbox immediate="true" layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
+				<alloy:selectManyListbox immediate="true" value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
@@ -38,7 +38,7 @@
 				longDescription="true" number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectManyListbox layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
+				<alloy:selectManyListbox value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
