--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
@@ -10,7 +10,7 @@
 				longDescription="true" number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectManyMenu immediate="true" layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
+				<alloy:selectManyMenu immediate="true" value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
@@ -39,7 +39,7 @@
 				longDescription="true" number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectManyMenu layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
+				<alloy:selectManyMenu value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
