--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/data-model/selectOneMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/data-model/selectOneMenu.xhtml
@@ -7,7 +7,7 @@
 		<h:form>
 			<showcase:example>
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
-				<alloy:selectOneMenu layout="lineDirection" value="#{selectOneModelBean.favoriteId}">
+				<alloy:selectOneMenu value="#{selectOneModelBean.favoriteId}">
 					<f:selectItems value="#{selectOneModelBean.liferayBenefits}" var="benefit" itemValue="#{benefit.id}"
 						itemLabel="#{benefit.label}" />
 				</alloy:selectOneMenu>
