--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonemenu/immediate/selectOneMenu.xhtml
@@ -10,7 +10,7 @@
 				longDescription="true" number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneMenu immediate="true" layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
+				<alloy:selectOneMenu immediate="true" value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
@@ -36,7 +36,7 @@
 				longDescription="true" number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
-				<alloy:selectOneMenu layout="pageDirection" value="#{selectOneModelBean.favoriteId}"
+				<alloy:selectOneMenu value="#{selectOneModelBean.favoriteId}"
 					valueChangeListener="#{selectOneBackingBean.valueChangeListener}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
