FACES-1714 Develop Liferay Faces Showcase (added copyright and dependency info to footer)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -13,6 +13,12 @@
 	*padding-top: 10px;
 }
 
+.aui .showcase-info {
+	margin-top: 2px;
+	font-style: italic;
+	font-size: 0.8em;
+}
+
 .aui .showcase-content-column,.aui .showcase-nav-column {
 	vertical-align: top;
 }
