FACES-1714 Develop Liferay Faces Showcase (added under-construction use-cases for alloy:audio, alloy:outputProgress, and alloy:video)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/filter/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/filter/dataTable.xhtml
@@ -6,6 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true">
+				<alloy:icon name="warning-sign" />
 				<alloy:outputText value="Filter Example Under Construction" />
 			</showcase:example>
 		</h:form>
