--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datatable/lazy/dataTable.xhtml
@@ -6,6 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true">
+				<alloy:icon name="warning-sign" />
 				<alloy:outputText value="Lazy (On-Demand) Loading Example Under Construction" />
 			</showcase:example>
 		</h:form>
