--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/image/general/image.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/image/general/image.xhtml
@@ -4,7 +4,7 @@
 	template="/templates/component-4col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Specifying a context-relative path to an image resource via the value attribute -->
+		<!-- Example 1: Context-relative path to a resource via the value attribute -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-image-general-example-1']}" longDescription="true" number="1"
 				renderedCheckbox="true">
@@ -15,7 +15,7 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Specifying a JSF resource via the #{resource} EL keyword -->
+		<!-- Example 2: JSF resource via the #{resource} EL keyword -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-image-general-example-2']}" longDescription="true" number="2">
 				<alloy:image value="#{resource['images:liferay-faces-logo.png']}" />
@@ -24,7 +24,7 @@
 	</ui:define>
 
 	<ui:define name="col3">
-		<!-- Example 3: Specifying a JSF resource via the library and name attributes -->
+		<!-- Example 3: JSF resource via the library and name attributes -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-image-general-example-3']}" longDescription="true" number="3">
 				<alloy:image library="images" name="liferay-faces-logo.png" />
@@ -33,7 +33,7 @@
 	</ui:define>
 
 	<ui:define name="col4">
-		<!-- Example 4: Specifying clickable areas via the usemap attribute -->
+		<!-- Example 4: Clickable areas via the usemap attribute -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-image-general-example-4']}" longDescription="true" number="4">
 				<alloy:image usemap="#logoMapName" value="/resources/images/liferay-faces-logo.png" />
